# scil_saps

./: .gitignore  BACKBONE_COMPARISON.md  Makefile  PROJECT_STRUCTURE.md  README.md  README_TESTING.md  collect_mario.py  collect_mario_complex.py  data_analysis.ipynb  dataset.py  latent_analysis.ipynb  losses.py  losses_paper.py  mario_1_1_expert.pkl  model_efficientnet.py  models.py  models_pretrained.py  pyproject.toml  results_scil_encoder_mario_1_1_efficientnet_b1_lam2_1_1.json  run_evaluation.sh  semantic_alignment.ipynb  test_mario_agent.py  test_supcon.py  train_scil.py  train_scil_pretrained.py
docs/: BACKBONE_COMPARISON.md  DATA_COLLECTION_GUIDE.md  README_TESTING.md  TESTING_GUIDE.md  report.md
scripts/: collect_mario.py  compare_results.py  results_scil_encoder_mario_1_1_efficientnet_b1_lam2_1_1.json  results_scil_stitched_1_1_enc_to_1_2_pol_1_1.json  run_evaluation.sh  test_env.py  test_mario_agent.py  test_supcon.py
