[project]
name = "scil-saps"
version = "0.1.0"
description = "SCIL (Self-supervised Contrastive Imitation Learning) with SAPS (Semantic Alignment for Policy Stitching) for Super Mario Bros"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    # Deep Learning
    "torch>=2.0.0",
    "torchvision>=0.15.0",

    # Mario Environment
    "gym==0.25.2",
    "gym-super-mario-bros>=7.4.0",
    "nes-py>=8.2.1",
    "pygame>=2.6.1",

    # Scientific Computing
    "numpy<2.0",  # Must be <2.0 for nes-py compatibility
    "scikit-learn>=1.3.0",

    # Visualization
    "matplotlib>=3.8.0",
    "seaborn>=0.12.0",

    # Image Processing
    "pillow>=10.0.0",

    # Utilities
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
